Add basic timer support

--- a/src/libruntime/Makefile.am
+++ b/src/libruntime/Makefile.am
@@ -35,6 +35,7 @@ libruntime_la_SOURCES =\
     syscall_entry.S \
     scheduler.c \
     thread.c \
+    timer.c \
     vmm.c
 
 libruntime_la_LDFLAGS = $(AM_LDFLAGS) $(LTLDFLAGS)
